--- a/styles/sass/_variables.scss
+++ b/styles/sass/_variables.scss
@@ -4,4 +4,4 @@ $color-gold: #ffc600;
 $color-green: #555f02;
 $color-brown: #1e140e;
 $font-display: Dokdo, cursive;
-$font-text: Lato, sans-serif;
+$font-sans-serif: Lato, sans-serif;
