--- a/styles/sass/style.scss
+++ b/styles/sass/style.scss
@@ -1,3 +1,8 @@
-@import 'setup';
-@import 'variables';
-@import 'typography';
+@import './base/setup';
+@import './base/variables';
+@import './base/mixins';
+@import './base/typography';
+
+
+// components
+@import './components/links-buttons';
