--- a/styles/style.css
+++ b/styles/style.css
@@ -281,3 +281,23 @@ button:focus {
   color: #555f02;
   background-color: #fafffe;
 }
+
+div.about1-icon a {
+  width: 50px;
+  height: 50px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  font-size: 1.7rem;
+  color: #fafffe;
+  background-color: #555f02;
+  border-radius: 50%;
+  border: 1px solid #555f02;
+  text-decoration: none;
+}
