--- a/styles/style.css
+++ b/styles/style.css
@@ -282,7 +282,7 @@ button:focus {
   background-color: #fafffe;
 }
 
-div.about1-icon a {
+div.about1-icon {
   width: 50px;
   height: 50px;
   display: -webkit-box;
@@ -299,5 +299,4 @@ div.about1-icon a {
   background-color: #555f02;
   border-radius: 50%;
   border: 1px solid #555f02;
-  text-decoration: none;
 }
