--- a/styles/sass/components/_top-bar.scss
+++ b/styles/sass/components/_top-bar.scss
@@ -1,16 +1,58 @@
 .logo {
   color: $color-gold;
-  font-size: 2.5rem;
+  font-size: 2rem;
+  line-height: 1;
 }
 
-.top-nav a {
-  text-decoration: none;
-  text-transform: uppercase;
-  font-weight: 700;
+input[type="checkbox"] {
+  opacity: 1;
+  position: absolute;
+}
+
+.mobile-menu-label {
   color: $color-light;
 }
 
-.top-nav a:hover,
-.top-nav a:focus {
-  color: $color-gold;
+.top-bar {
+  display: flex;
+  justify-content: space-between;
+  padding: 5%;
+}
+
+.logo, .top-nav {
+  flex: 1 0 40%;
+}
+
+form {
+  text-align: right;
+}
+
+.top-nav {
+  position: relative;
+    ul {
+      position: absolute;
+      top: 37px;
+      right: 0;
+      display: none;
+    }
+}
+
+.top-nav li {
+  text-align: right;
+  background-color: $color-green;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+    a {
+      text-decoration: none;
+      text-transform: uppercase;
+      font-size: 1rem;
+      font-weight: 700;
+      color: $color-light;
+      padding: 5px 10px;
+    }
+}
+
+input[type="checkbox"]:checked .top-nav ul {
+  display: block;
 }
