--- a/styles/style.css
+++ b/styles/style.css
@@ -303,17 +303,77 @@ div.about1-icon {
 
 .logo {
   color: #ffc600;
-  font-size: 2.5rem;
+  font-size: 2rem;
+  line-height: 1;
 }
 
-.top-nav a {
-  text-decoration: none;
-  text-transform: uppercase;
-  font-weight: 700;
+input[type="checkbox"] {
+  opacity: 1;
+  position: absolute;
+}
+
+.mobile-menu-label {
   color: #fafffe;
 }
 
-.top-nav a:hover,
-.top-nav a:focus {
-  color: #ffc600;
+.top-bar {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  padding: 5%;
+}
+
+.logo, .top-nav {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 0 40%;
+          flex: 1 0 40%;
+}
+
+form {
+  text-align: right;
+}
+
+.top-nav {
+  position: relative;
+}
+
+.top-nav ul {
+  position: absolute;
+  top: 37px;
+  right: 0;
+  display: none;
+}
+
+.top-nav li {
+  text-align: right;
+  background-color: #555f02;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.top-nav li a {
+  text-decoration: none;
+  text-transform: uppercase;
+  font-size: 1rem;
+  font-weight: 700;
+  color: #fafffe;
+  padding: 5px 10px;
+}
+
+input[type="checkbox"]:checked .top-nav ul {
+  display: block;
+}
+
+body {
+  background-color: #1e140e;
 }
