--- a/styles/sass/components/_top-bar.scss
+++ b/styles/sass/components/_top-bar.scss
@@ -5,7 +5,7 @@
 }
 
 input[type="checkbox"] {
-  opacity: 1;
+  opacity: 0;
   position: absolute;
 }
 
@@ -19,16 +19,13 @@ input[type="checkbox"] {
   padding: 5%;
 }
 
-.logo, .top-nav {
-  flex: 1 0 40%;
-}
-
-form {
-  text-align: right;
-}
-
 .top-nav {
   position: relative;
+    label {
+      cursor: pointer;
+      font-size: 1.7rem;
+      line-height: 1;
+    }
     ul {
       position: absolute;
       top: 37px;
@@ -53,6 +50,6 @@ form {
     }
 }
 
-input[type="checkbox"]:checked .top-nav ul {
+input[type="checkbox"]:checked + ul {
   display: block;
 }
