--- a/styles/sass/components/_top-bar.scss
+++ b/styles/sass/components/_top-bar.scss
@@ -29,7 +29,7 @@ input[type="checkbox"] {
     ul {
       position: absolute;
       top: 37px;
-      right: 0;
+      right: 5px;
       display: none;
     }
 }
