--- a/styles/style.css
+++ b/styles/style.css
@@ -339,7 +339,7 @@ input[type="checkbox"] {
 .top-nav ul {
   position: absolute;
   top: 37px;
-  right: 0;
+  right: 5px;
   display: none;
 }
 
@@ -370,6 +370,48 @@ input[type="checkbox"]:checked + ul {
   display: block;
 }
 
+header {
+  background: url("../images/home-header.jpg") no-repeat bottom right;
+  background-size: cover;
+  height: 100vh;
+}
+
+.site-title {
+  margin: 0 5%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  height: 200px;
+}
+
+.site-title h1 {
+  font-size: 3.5rem;
+  color: #ffc600;
+  text-align: center;
+  line-height: 1;
+  display: inline-block;
+}
+
+.site-title span {
+  display: block;
+  font-family: Lato, sans-serif;
+  font-size: 1.3rem;
+  color: #fafffe;
+  letter-spacing: 2px;
+  text-align: left;
+}
+
+.header-block-img {
+  display: none;
+}
+
 body {
   background-color: #1e140e;
+  color: #fafffe;
 }
