added box-shadow mixin

--- a/styles/sass/base/_typography.scss
+++ b/styles/sass/base/_typography.scss
@@ -1,5 +1,6 @@
 body {
-  font: 400 1.25rem/1.4 $font-sans-serif;
+  font: 400 1.1rem/1.4 $font-sans-serif;
+  letter-spacing: 1px;
 }
 
 .logo p, h1, h2, a, button, .aside-content h3 {
