--- a/styles/sass/base/_variables.scss
+++ b/styles/sass/base/_variables.scss
@@ -2,6 +2,7 @@ $color-light: #fafffe;
 $color-grey: #262725;
 $color-gold: #ffc600;
 $color-green: #555f02;
+$color-green-rgba: rgba(85, 95, 2, 0.6);
 $color-brown: #1e140e;
 $font-display: Dokdo, cursive;
 $font-sans-serif: Lato, sans-serif;
