--- a/styles/sass/base/_mixins.scss
+++ b/styles/sass/base/_mixins.scss
@@ -3,10 +3,14 @@
   letter-spacing: 1px;
   background-color: $color-green;
   color: $color-light;
-  padding: 10px;
+  padding: 5px 10px;
 }
 
 @mixin header-styles($font-size: 3.5rem, $font-color: $color-gold) {
   font-size: $font-size;
   color: $font-color;
+}
+
+@mixin box-shadow($horizontal: -15px, $vertical: 15px, $color: $color-green) {
+  box-shadow: $horizontal $vertical $color-green;
 }
