--- a/styles/sass/layout/_home-mobile.scss
+++ b/styles/sass/layout/_home-mobile.scss
@@ -1,3 +1,8 @@
+body {
+  background-color: $color-brown;
+  color: $color-light;
+}
+
 header {
   background: url('../images/home-header.jpg') no-repeat bottom right;
   background-size: cover;
@@ -9,7 +14,7 @@ header {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 200px;
+  height: 220px;
   h1 {
     @include header-styles();
     text-align: center;
@@ -29,3 +34,26 @@ header {
   display: none;
 }
 
+section.intro {
+  padding: 50px 0;
+}
+
+.intro-txt {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  h2 {
+    @include header-styles(2rem);
+    letter-spacing: 2px;
+  }
+  a {
+    margin-bottom: 30px;
+  }
+  p {
+    margin-bottom: 30px;
+  }
+}
+
+div.intro-img {
+  @include box-shadow();
+}
