--- a/styles/sass/base/_setup.scss
+++ b/styles/sass/base/_setup.scss
@@ -6,4 +6,4 @@ a,abbr,acronym,address,applet,article,aside,audio,b,big,blockquote,body,canvas,c
 
 .visually-hidden:not(:focus):not(:active) { position: absolute; width: 1px; height: 1px; margin: -1px;border: 0;padding: 0;white-space: nowrap;clip-path: inset(100%);clip: rect(00 0 0);overflow: hidden;}
 
-img { max-width: 100%; display: block; }
+img { width: 100%; display: block; }
