--- a/styles/sass/layout/_home-mobile.scss
+++ b/styles/sass/layout/_home-mobile.scss
@@ -34,7 +34,10 @@ header {
   display: none;
 }
 
-section.intro {
+section.intro, 
+section.gallery, 
+section.about1, 
+section.about2 {
   padding: 50px 0;
 }
 
@@ -57,3 +60,37 @@ section.intro {
 div.intro-img {
   @include box-shadow();
 }
+
+section.gallery, 
+section.about2 {
+  background-color: $color-grey;
+}
+
+.gallery-imgs li {
+  margin-bottom: 20px;
+}
+
+.gallery-imgs li:last-of-type {
+  margin-bottom: 0;
+}
+
+.about1-content {
+  display: flex;
+  margin-bottom: 30px;
+  .about1-icon {
+    flex: 1 0 calc(50px - 10px);
+    margin-right: 10px;
+  }
+  .about1-text {
+    flex: 2 0 70%;
+    padding-top: 13px;
+    h2 {
+      @include header-styles(1.8rem);
+      letter-spacing: 2px;
+      line-height: 0.9;
+      margin-bottom: 10px;
+    }
+  }
+}
+
+
