--- a/styles/style.css
+++ b/styles/style.css
@@ -222,12 +222,12 @@ textarea {
 }
 
 img {
-  max-width: 100%;
+  width: 100%;
   display: block;
 }
 
 body {
-  font: 400 1.1rem/1.4 Lato, sans-serif;
+  font: 300 1.1rem/1.4 Lato, sans-serif;
   letter-spacing: 1px;
 }
 
@@ -289,9 +289,7 @@ button:focus {
   background-color: #fafffe;
 }
 
-div.about1-icon {
-  width: 50px;
-  height: 50px;
+div.about1-icon i {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -301,6 +299,8 @@ div.about1-icon {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  width: 50px;
+  height: 50px;
   font-size: 1.7rem;
   color: #fafffe;
   background-color: #555f02;
@@ -423,7 +423,10 @@ header {
   display: none;
 }
 
-section.intro {
+section.intro,
+section.gallery,
+section.about1,
+section.about2 {
   padding: 50px 0;
 }
 
@@ -457,4 +460,46 @@ section.intro {
 div.intro-img {
   -webkit-box-shadow: -15px 15px #555f02;
           box-shadow: -15px 15px #555f02;
+}
+
+section.gallery,
+section.about2 {
+  background-color: #262725;
+}
+
+.gallery-imgs li {
+  margin-bottom: 20px;
+}
+
+.gallery-imgs li:last-of-type {
+  margin-bottom: 0;
+}
+
+.about1-content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-bottom: 30px;
+}
+
+.about1-content .about1-icon {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 0 calc(50px - 10px);
+          flex: 1 0 calc(50px - 10px);
+  margin-right: 10px;
+}
+
+.about1-content .about1-text {
+  -webkit-box-flex: 2;
+      -ms-flex: 2 0 70%;
+          flex: 2 0 70%;
+  padding-top: 13px;
+}
+
+.about1-content .about1-text h2 {
+  font-size: 1.8rem;
+  color: #ffc600;
+  letter-spacing: 2px;
+  line-height: 0.9;
+  margin-bottom: 10px;
 }
