--- a/styles/sass/layout/_home-mobile.scss
+++ b/styles/sass/layout/_home-mobile.scss
@@ -93,4 +93,68 @@ section.about2 {
   }
 }
 
+.about1-content:last-child {
+  margin-bottom: 0;
+}
 
+.about2-img {
+  margin: 0 5% 50px 5%;
+  @include box-shadow(15px, 15px, $color-gold);
+}
+
+.about2-content {
+  .about2-text {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 0 5%;
+    margin-bottom: 50px;
+    h2 {
+      @include header-styles(1.8rem);
+      letter-spacing: 2px;
+      line-height: 0.9;
+      margin-bottom: 10px;
+    }
+    p {
+      margin-bottom: 30px;
+    }
+  }
+}
+
+.about2-content:last-child {
+  .about2-img {
+    margin: 0 5% 50px 5%;
+    @include box-shadow(-15px, 15px, $color-gold);
+  }
+  .about2-text {
+    margin-bottom: 0;
+  }
+}
+
+.about3-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 0 5%;
+  h2 {
+    @include header-styles(1.8rem);
+      letter-spacing: 2px;
+      line-height: 0.9;
+      margin: 50px 0 10px 0;
+  }
+  p {
+    margin-bottom: 30px;
+  }
+  a {
+    margin-bottom: 50px;
+  }
+}
+
+footer {
+  padding: 10px;
+  background-color: $color-grey;
+  p {
+    text-align: center;
+  }
+}
