added blog post

--- a/styles/sass/layout/_home-mobile.scss
+++ b/styles/sass/layout/_home-mobile.scss
@@ -3,7 +3,7 @@ body {
   color: $color-light;
 }
 
-header {
+.home-header {
   background: url('../images/home-header.jpg') no-repeat bottom right;
   background-size: cover;
   height: 100vh;
