finished form css

--- a/styles/sass/style.scss
+++ b/styles/sass/style.scss
@@ -9,6 +9,7 @@
 @import './components/links-buttons';
 @import './components/home-icons';
 @import './components/top-bar';
+@import './components/form';
 
 // layouts
 @import './layout/home-mobile';
