finished mobile layout for blog

--- a/styles/sass/components/_form.scss
+++ b/styles/sass/components/_form.scss
@@ -1,5 +1,5 @@
 form {
-  padding: 50px 5%;
+  padding: 50px 5% 100px 5%;
   fieldset { 
     display: flex;
     flex-direction: column;
@@ -34,4 +34,3 @@ input[type="email"],
   font-size: 1rem;
   font-weight: 300;
 }
-
