started contact page layout

--- a/styles/sass/style.scss
+++ b/styles/sass/style.scss
@@ -14,6 +14,6 @@
 // layouts
 @import './layout/home-mobile';
 @import './layout/blog-mobile';
-
+@import './layout/contact-mobile';
 @import './layout/footer';
 
