--- a/styles/sass/components/_form.scss
+++ b/styles/sass/components/_form.scss
@@ -16,12 +16,14 @@ form {
       border-bottom: 2px solid $color-gold;
     }
     textarea {
-      width: 100%;
       height: 200px;
       border: 2px solid $color-gold;
       font-family: Lato, sans-serif;
       font-size: 1rem;
       font-weight: 300;
+    }
+    button {
+      width: 100%;
     }
   }
 }
