linked logo to home

--- a/styles/sass/components/_top-bar.scss
+++ b/styles/sass/components/_top-bar.scss
@@ -1,7 +1,8 @@
-.logo {
+.logo a {
   color: $color-gold;
   font-size: 1.8rem;
   line-height: 1.2;
+  text-decoration: none;
 }
 
 input[type="checkbox"] {
