--- a/styles/sass/style.scss
+++ b/styles/sass/style.scss
@@ -4,12 +4,12 @@
 @import './base/typography';
 @import './base/wrapper';
 
-
 // components
 @import './components/links-buttons';
 @import './components/home-icons';
 @import './components/top-bar';
 @import './components/form';
+@import './components/scroll-up-btn';
 
 // layouts
 @import './layout/home-mobile';
