started media queries

--- a/styles/sass/style.scss
+++ b/styles/sass/style.scss
@@ -16,4 +16,4 @@
 @import './layout/blog-mobile';
 @import './layout/contact-mobile';
 @import './layout/footer';
-
+@import './layout/media-queries';
