--- a/styles/style.css
+++ b/styles/style.css
@@ -557,6 +557,8 @@ section.about2 {
 div.intro-img {
   -webkit-box-shadow: -15px 15px #555f02;
           box-shadow: -15px 15px #555f02;
+  max-width: 304px;
+  margin: 0 auto;
 }
 
 section.gallery,
@@ -863,4 +865,15 @@ footer {
 footer p {
   text-align: center;
   font-size: 1rem;
+}
+
+@media (min-width: 480px) {
+  .gallery-imgs {
+    max-width: 400px;
+    margin: 0 auto;
+  }
+  .aside-content {
+    max-width: 368px;
+    margin: 0 auto;
+  }
 }
