--- a/styles/sass/layout/_media-queries.scss
+++ b/styles/sass/layout/_media-queries.scss
@@ -119,12 +119,29 @@ form {
     height: 755px;
   }
 
+  .header-content {
+    display: flex;
+    flex-direction: row-reverse;
+  }
+
   .site-title {
     display: initial;
+    margin: initial;
+    flex: 1 0 calc(50% - 15px);
+    margin-left: 15px;
+    padding-top: 30px;
+    h1 {
+      font-size: 5rem;
+      span {
+        font-size: 2rem;
+      }
+    }
   }
 
   .header-block-img {
     display: initial;
+    flex: 1 0 calc(50% - 15px);
+    margin-right: 15px;
     img {
       max-width: 695px;
     }
